main menu sidebar

--- a/themes/demo/content/static-pages/online-anfrage-wiederverkaeufer.htm
+++ b/themes/demo/content/static-pages/online-anfrage-wiederverkaeufer.htm
@@ -36,10 +36,10 @@ navigation_hidden = 0
 				<h3>Produktauswahl</h3>Angaben zum konkreten Bedarf
 				<br>
 				<label for="LandhausdielenSerie">Landhausdielen Serie &nbsp;*</label>&nbsp;
-				<select multiple="" name="LandhausdielenSerie[]" size="4">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-					<option selected="selected" value="CASTLE ANTIK - antike Oberfläche">CASTLE ANTIK - antike Oberfläche&nbsp;</option> &nbsp;
-					<option value="MOUNTAIN - handgehobelt">MOUNTAIN - handgehobelt&nbsp;</option> &nbsp;
-					<option value="SCENIC - gebürstet">SCENIC - gebürstet&nbsp;</option> &nbsp;
+				<select multiple="" name="LandhausdielenSerie[]" size="4">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+					<option selected="selected" value="CASTLE ANTIK - antike Oberfläche">CASTLE ANTIK - antike Oberfläche&nbsp;</option>&nbsp; &nbsp;&nbsp;
+					<option value="MOUNTAIN - handgehobelt">MOUNTAIN - handgehobelt&nbsp;</option>&nbsp; &nbsp;&nbsp;
+					<option value="SCENIC - gebürstet">SCENIC - gebürstet&nbsp;</option>&nbsp; &nbsp;&nbsp;
 					<option value="VIENNA CLASSIC - glatt geschliffen">VIENNA CLASSIC - glatt geschliffen&nbsp;</option>&nbsp;</select>&nbsp;
 				<label for="Menge">Menge in m2</label>
 				<br>
