main menu sidebar - plugin activemenuitem

--- a/themes/demo/content/static-pages/das-unternehmen.htm
+++ b/themes/demo/content/static-pages/das-unternehmen.htm
@@ -1,9 +1,13 @@
 [viewBag]
 title = "Das Unternehmen"
 url = "/das-unternehmen"
-layout = "default"
+layout = "static-layout"
 is_hidden = 0
 navigation_hidden = 0
+meta_description = "Infos zum Unternehmen - WOHNGESUND. Eine kurze Einführung in die Firmengeschichte von Gottfried Crepaz."
+seo_description = "Infos zum Unternehmen - WOHNGESUND. Eine kurze Einführung in die Firmengeschichte von Gottfried Crepaz."
+robot_index = "index"
+robot_follow = "follow"
 ==
 <p>Beginnend im Jahre 1989 mit einem ökologisch ausgerichteten Baustoffhandel - daher unser Firmenname WOHNGESUND - bzw. dem Großhandel mit Bodenölen, Wachsen und Naturharzfarben, hat sich unsere Firma über die letzten 20 Jahre zu einem der führenden österreichischen Anbietern jeglicher Art von Parkett und Holzböden, Landhausdielen und Terrassenhölzern entwickelt.</p>
 
