--- a/themes/demo/content/static-pages/holzdielen.htm
+++ b/themes/demo/content/static-pages/holzdielen.htm
@@ -1,9 +1,13 @@
 [viewBag]
 title = "Holzdielen"
 url = "/holzdielen"
-layout = "default"
+layout = "static-layout"
 is_hidden = 0
 navigation_hidden = 0
+meta_description = "Holzdielen von Wohngesund in zahlreichen Variationen verschönern jede Art von Raum. Jede Holzdiele ist einzigartig und besteht aus nachhaltigem Pappelholz."
+seo_description = "Holzdielen von Wohngesund in zahlreichen Variationen verschönern jede Art von Raum. Jede Holzdiele ist einzigartig und besteht aus nachhaltigem Pappelholz."
+robot_index = "index"
+robot_follow = "follow"
 ==
 <p>
 	<br><img src="http://www.landhausdielen-wien.at/images/stories/landhausdiele/galerie/silvretta/parkett_SILVRETTA_78.jpg" border="0" alt="Holzdielen Boden aus gehobelter Eiche" class="fr-dii fr-draggable" style="width: 350px;">Wenige Böden in Haus und Wohnung wirken so natürlich und gleichzeitig rustikal und elegant wie ein <strong>Holzdielen-Boden</strong>. Das dankbare Material verschönert jeden Raum und kann je nach Variation verschiedenen Zwecken dienen, aber auch unterschiedliche Wirkungen hervorrufen. Je nachdem, welche Art von Raum Sie einrichten und was Sie präsentieren und repräsentieren möchten - bei den Holzdielen von Wohngesund werden Sie sicher fündig. Wir bieten Holzdielen-Böden sowohl für extravagante Villen, Restaurants und Landhäuser als auch für kleinere Wohnhäuser. Als Generalimporteur beliefern wir u.a. Innenausstatter und Entwickler großer Projekte, aber auch Einzelhandelskunden mit <strong>Holzdielen</strong>.
