--- a/themes/demo/content/static-pages/home.htm
+++ b/themes/demo/content/static-pages/home.htm
@@ -1,9 +1,13 @@
 [viewBag]
 title = "Home"
 url = "/"
-layout = "default"
+layout = "static-layout"
 is_hidden = 0
 navigation_hidden = 0
+meta_description = "Landhausdiele Wien - Infos, Aktionen und kompetente Beratung zu den Landhausdielen/Eichendielen von Wohngesund in Wien."
+seo_description = "Landhausdiele Wien - Infos, Aktionen und kompetente Beratung zu den Landhausdielen/Eichendielen von Wohngesund in Wien."
+robot_index = "index"
+robot_follow = "follow"
 ==
 <h2>
 	<a href="http://www.wohngesund.at/parkett-aktionen"><img src="http://www.wohngesund.at/sites/default/files/parkett-aktion.png" border="0" alt="Parkett und Landhausdielen in Aktion" height="264" class="fr-dii fr-draggable" style="width: 626px;"></a>
