--- a/themes/demo/content/static-pages/landhausdielen-pflege.htm
+++ b/themes/demo/content/static-pages/landhausdielen-pflege.htm
@@ -1,9 +1,13 @@
 [viewBag]
 title = "Landhausdielen Pflege"
 url = "/landhausdielen-pflege"
-layout = "default"
+layout = "static-layout"
 is_hidden = 0
 navigation_hidden = 0
+meta_description = "Pflegehinweise und Tipps für die geölten und lackierten Eiche Landhausdielen von Wohngesund."
+seo_description = "Pflegehinweise und Tipps für die geölten und lackierten Eiche Landhausdielen von Wohngesund."
+robot_index = "index"
+robot_follow = "follow"
 ==
 <p>Mit Ausnahme von NASCHMARKT und FREUDENAU sind alle COUNTRY HOUSE Landhausdielen mit Naturölen vorbehandelt. Ob sie in Ihrem Haus, Loft, Wohnung, in Ihrem Restaurant oder anderen gewerblichen Objekten Holzböden verlegen möchten, wir haben für alle Anwendungsbereiche die passende Naturholzdiele. Grundsätzlich sind die Holzdielen mit Naturölen vorgeölt und werden nach der Verlegung mit entsprechendem Bodenöl, z.B. verdünntem WOHNCOLOR Parkettöl Top, endbehandelt. In der Benützung entsteht mit der Zeit eine eigene attraktive und für Eichendielen typische Patina, die den Charakter der natürlichen COUNTRY HOUSE Eichen Landhausdielen noch stärker zur Entfaltung bringt.</p>
 
