--- a/themes/demo/content/static-pages/wiederverkaeufer.htm
+++ b/themes/demo/content/static-pages/wiederverkaeufer.htm
@@ -1,9 +1,13 @@
 [viewBag]
 title = "Grosshandel"
 url = "/wiederverkaeufer"
-layout = "default"
+layout = "static-layout"
 is_hidden = 0
 navigation_hidden = 0
+meta_description = "Information für Wiederverkäufer zu unserem  Terrassendielen Angebot für Holzterrassen."
+seo_description = "Information für Wiederverkäufer zu unserem  Terrassendielen Angebot für Holzterrassen."
+robot_index = "index"
+robot_follow = "follow"
 ==
 <h3>GROSSE AUSWAHL - PREISWERT - SOFORT LIEFERBA</h3>
 
