code optimizing, css styling

--- a/themes/demo/content/static-pages/home.htm
+++ b/themes/demo/content/static-pages/home.htm
@@ -9,52 +9,42 @@ seo_description = "Landhausdiele Wien - Infos, Aktionen und kompetente Beratung 
 robot_index = "index"
 robot_follow = "follow"
 ==
-<h2>
-	<a href="http://www.wohngesund.at/parkett-aktionen"><img src="http://www.wohngesund.at/sites/default/files/parkett-aktion.png" border="0" alt="Parkett und Landhausdielen in Aktion" height="264" class="fr-dii fr-draggable" style="width: 626px;"></a>
-</h2>
-
-<h2><a href="http://www.wohngesund.at/aktionen/parkett-landhausdielen" target="_blank">ZUR AKTIONSSEITE AUF WOHNGESUND.AT</a></h2>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<h2>COUNTRY HOUSE LANDHAUSDIELEN VON WOHNGESUND IN WIEN</h2>
-
-<h3>FÜR JEDEN BEDARF DIE PASSENDE LANDHAUSDIELE/EICHENDIELE</h3>
-
 <p>
-	<br>
-	<br>
+	<a href="http://www.wohngesund.at/aktionen/parkett-landhausdielen" target="_blank" title="Zur Aktionsseite auf wohngesund.at"><img class="fr-dib fr-draggable" src="/storage/app/media/uploaded-files/landhausdiele-eiche-versailles.jpg" data-result="success"></a>
 </p>
+
+<div class="orange"><a href="http://www.wohngesund.at/aktionen/parkett-landhausdielen" target="_blank">AKTUELLE LANDHAUSDIELEN ANGEBOTE AUF WOHNGESUND.AT <span class="icon-external-link"></span></a></div>
+
+<h1>COUNTRY HOUSE Landhausdielen von WOHNGESUND in Wien</h1>
+
+<h2>Für jeden Bedarf die passende Landhausdiele/Eichendiele</h2>
 
 <p>Die <strong>Country House <a href="http://www.wohngesund.at/landhausdielen-eiche" target="_blank" title="Landhausdielen aus Eiche - jetzt anschauen!">Landhausdielen</a> von WOHNGESUND</strong> sind in vielen verschiedenen Designs und Oberflächenvarianten erhältlich. Ob geschliffene Holzdielen, gebürstete Landhausdielen, antik gealterte Schloßdielen, rustikale Lärchendielen oder eine Vielzahl von <strong>Eichendielen</strong> -in mehr als 30 Oberflächenvarianten (!)-, bei COUNTRY HOUSE Landhausdielen und Massivholzdielen haben Sie bei Wohngesund eine wahrhaft große Auswahl von Produkten zur Verfügung:</p>
 
 <ul>
-	<li><strong><a href="http://www.landhausdielen-wien.at/landhausdiele-mountain.html" title="Eiche Landhausdiele Mountain">Eiche Landhausdiele handgehobelt</a></strong> (Montafon, Dolomiti, Silvretta, Cordillera)</li>
-	<li><strong><a href="http://www.landhausdielen-wien.at/landhausdiele-scenic.html" title="Eiche Landhausdiele Scenic">Eiche Landhausdiele gebürstet</a></strong> (Provence, Cornwall, Gotland, Algarve)</li>
-	<li><strong><a href="http://www.landhausdielen-wien.at/landhausdielen-castle-antik.html" title="Eichendiele Castle Antik">Landhausdiele Castle Antik</a></strong> (Alhambra, Belvedere, Versailles, Mirabell)</li>
-	<li><strong><a href="http://www.landhausdielen-wien.at/landhausdiele-vienna-classic.html" title="Eiche Landhausdiele Vienna Classic">Landhausdiele Vienna Classic</a></strong> (Neustift, Mariahilf, Semmering, Freudenau, Grinzing)</li>
+	<li><strong><a href="/landhausdiele-mountain" title="Eiche Landhausdiele Mountain">Eiche Landhausdiele handgehobelt</a></strong> (Montafon, Dolomiti, Silvretta, Cordillera)</li>
+	<li><strong><a href="/landhausdiele-scenic" title="Eiche Landhausdiele Scenic">Eiche Landhausdiele gebürstet</a></strong> (Provence, Cornwall, Gotland, Algarve)</li>
+	<li><strong><a href="/landhausdielen-castle-antik" title="Eichendiele Castle Antik">Landhausdiele Castle Antik</a></strong> (Alhambra, Belvedere, Versailles, Mirabell)</li>
+	<li><strong><a href="/landhausdiele-vienna-classic" title="Eiche Landhausdiele Vienna Classic">Landhausdiele Vienna Classic</a></strong> (Neustift, Mariahilf, Semmering, Freudenau, Grinzing)</li>
 </ul>
 
 <p>Die <strong>Landhausdielen</strong> und <strong>Eichendielen</strong> von WOHNGESUND sind grundsätzlich Einblattdielen, das heißt, das sichtbare Deckholz ist aus einem Stück! Auf Vorbestellung sind auch Mehrblattdielen erhältlich, bei denen die Deckschicht aus 2-3 Streifen zusammengeleimt sind.</p>
+<br>
+<div class="tuerkis-border"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> <a href="#" target="_blank"><span class="icon-file-pdf-o"></span> Download mit allen Infos zu unserer Country House Landhausdielen Serie (Castle Antik, Vienna Classic, Mountain, Scenic)</a></div>
+<br>
+<br>
+<div class="row">
+	<div class="col-sm-4"><img class="fr-dib fr-draggable fr-fil" src="/storage/app/media/uploaded-files/landhausdiele-montafon-start.jpg" style="width: 260px;" data-result="success"></div>
+	<div class="col-sm-4"><img class="fr-dib fr-draggable fr-fil" src="/storage/app/media/uploaded-files/landhausdiele-montafon-start02.jpg" style="width: 260px;" data-result="success"></div>
+	<div class="col-sm-4"><img class="fr-dib fr-draggable fr-fil" src="/storage/app/media/uploaded-files/landhausdiele-semmering-start.jpg" style="width: 260px;" data-result="success"></div>
+</div>
 
-<p><a href="http://www.landhausdielen-wien.at/images/downloads/Sortierung_Landhausdielen.pdf" target="_blank">PDF Download mit allen Infos zu unserer Country House Landhausdielen Serie (Castle Antik, Vienna Classic, Mountain, Scenic)</a></p>
+<p>
+	<br>
+</p>
 
-<p>&nbsp;</p>
+<p>Der Vorteil von Landhausdielen ist einerseits, dass eine große und breite Dielenoptik erzielt werden kann, andererseits der rasche Einbau. Die <strong>Landhausdielen und Eichendielen von WOHNGESUND sind grundsätzlich Einblattdielen</strong>, das heißt, das sichtbare Deckholz ist aus einem Stück und ein hochwertiges Sägefurnier. Das bedeutet zum Unterschied der herkömmlichen Schälfurnier, das das Rohmaterial unbehandelt verarbeitet wird und daher elastisch bleibt. Dies wiederum verhindert das Ablösen der Deckschicht vom Unterboden der aus nachhaltigem Pappelholz ist. Unsere <strong>Landhausdielen</strong> weisen eine 4mm Nutzschicht auf, welche man mehrmals schleifen kann. Die Gesamtstärke beträgt 15mm. Auf Vorbestellung sind auch Mehrblattdielen erhältlich, bei denen die Deckschicht aus 2-3 Streifen zusammengeleimt sind.</p>
 
-<p><img src="http://www.landhausdielen-wien.at/images/stories/landhausdiele/landhausdiele-montafon-start.jpg" border="0" height="137" align="left" class="fr-fil fr-dii fr-draggable" style="width: 182px;"><img src="http://www.landhausdielen-wien.at/images/stories/landhausdiele/landhausdiele-montafon-start02.jpg" border="0" height="137" align="left" class="fr-fil fr-dii fr-draggable" style="width: 182px;"><img src="http://www.landhausdielen-wien.at/images/stories/landhausdiele/landhausdiele-semmering-start.jpg" border="0" height="137" align="left" class="fr-fil fr-dii fr-draggable" style="width: 182px;"></p>
+<p>Sollten sie sich für <strong>Parkettböden</strong> interessieren, dann stöbern sie doch auf unserer neu gestalteten Wohngesund.at Website in der <a href="http://www.wohngesund.at/parkett" target="_blank" title="Alle Parkettböden von Wohngesund">Parkett Galerie <span class="icon-external-link"></span></a>!</p>
 
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>Der Vorteil von Landhausdielen ist einerseits, dass eine große und breite Dielenoptik erzielt werden kann, andererseits der rasche Einbau.</p>
-
-<p>Die <strong>Landhausdielen und Eichendielen von WOHNGESUND sind grundsätzlich Einblattdielen</strong>, das heißt, das sichtbare Deckholz ist aus einem Stück und ein hochwertiges Sägefurnier. Das bedeutet zum Unterschied der herkömmlichen Schälfurnier, das das Rohmaterial unbehandelt verarbeitet wird und daher elastisch bleibt. Dies wiederum verhindert das Ablösen der Deckschicht vom Unterboden der aus nachhaltigem Pappelholz ist. Unsere<strong>Landhausdielen</strong> weisen eine 4mm Nutzschicht auf, welche man mehrmals schleifen kann. Die Gesamtstärke beträgt 15mm. Auf Vorbestellung sind auch Mehrblattdielen erhältlich, bei denen die Deckschicht aus 2-3 Streifen zusammengeleimt sind.</p>
-
-<p>Sollten sie sich für <strong>Parkettböden</strong> interessieren, dann stöbern sie doch auf unserer neu gestalteten Wohngesund.at Website in der <a href="http://www.wohngesund.at/parkett" target="_blank" title="Alle Parkettböden von Wohgnesund">Parkett</a> Galerie!</p>
-
-<h4>KOSTENLOSE HOTLINE: 0800/25 22 11</h4>
+<h3>KOSTENLOSE HOTLINE: 0800/25 22 11</h3>
