holzdielen.htm, home.htm ...

--- a/themes/demo/content/static-pages/holzdielen.htm
+++ b/themes/demo/content/static-pages/holzdielen.htm
@@ -9,50 +9,23 @@ seo_description = "Holzdielen von Wohngesund in zahlreichen Variationen verschö
 robot_index = "index"
 robot_follow = "follow"
 ==
-<p>
-	<br><img src="http://www.landhausdielen-wien.at/images/stories/landhausdiele/galerie/silvretta/parkett_SILVRETTA_78.jpg" border="0" alt="Holzdielen Boden aus gehobelter Eiche" class="fr-dii fr-draggable" style="width: 350px;">Wenige Böden in Haus und Wohnung wirken so natürlich und gleichzeitig rustikal und elegant wie ein <strong>Holzdielen-Boden</strong>. Das dankbare Material verschönert jeden Raum und kann je nach Variation verschiedenen Zwecken dienen, aber auch unterschiedliche Wirkungen hervorrufen. Je nachdem, welche Art von Raum Sie einrichten und was Sie präsentieren und repräsentieren möchten - bei den Holzdielen von Wohngesund werden Sie sicher fündig. Wir bieten Holzdielen-Böden sowohl für extravagante Villen, Restaurants und Landhäuser als auch für kleinere Wohnhäuser. Als Generalimporteur beliefern wir u.a. Innenausstatter und Entwickler großer Projekte, aber auch Einzelhandelskunden mit <strong>Holzdielen</strong>.
+<div class="row col-sm-12">
+	<div class="clearfix">
+		<h1 class="title">Holzdielen von WOHNGESUND</h1>
+		<div><img style="float: left; padding-right: 20px; padding-bottom: 5px;" class="fr-dib fr-draggable" src="/storage/app/media/uploaded-files/parkett_SILVRETTA_78.jpg" data-result="success"><span class="floatleft">Wenige Böden in Haus und Wohnung wirken so natürlich und gleichzeitig rustikal und elegant wie ein <strong>Holzdielen-Boden</strong>. Das dankbare Material verschönert jeden Raum und kann je nach Variation verschiedenen Zwecken dienen, aber auch unterschiedliche Wirkungen hervorrufen. Je nachdem, welche Art von Raum Sie einrichten und was Sie präsentieren und repräsentieren möchten - bei den Holzdielen von Wohngesund werden Sie sicher fündig. Wir bieten Holzdielen-Böden sowohl für extravagante Villen, Restaurants und Landhäuser als auch für kleinere Wohnhäuser. Als Generalimporteur beliefern wir u.a. Innenausstatter und Entwickler großer Projekte, aber auch Einzelhandelskunden mit <strong>Holzdielen</strong>.</span></div>
+	</div>
 	<br>
+	<h2>Anspruchsvolle Verarbeitung der Holzdiele</h2>
+	<p>Der <strong>Unterboden</strong> einer Holzdiele <strong>besteht aus nachhaltigem Pappelholz</strong>, die Deckschicht aus einem hochwertigen Eichen-Sägefurnier. Im Gegensatz zum herkömmlichen Schälfurnier behält das gesägte Furnier seine natürliche, helle Farbe und ist nicht anfällig für die Bildung von Rissen und Brüchen. Zudem kann das Rohmaterial unbehandelt verarbeitet werden; es bleibt dadurch elastisch und wirkt einem Ablösen der Deckschicht vom Unterboden entgegen.</p>
+	<p>Unsere Holzdielen sind sogenannte Einblattdielen, auf Wunsch können Sie jedoch auch Mehrblattdielen erhalten, deren Deckschicht aus zwei bis drei Streifen geleimt ist. Die Gesamtstärke einer Holzdiele beträgt 15 mm, die 4 mm starke Nutzschicht kann mehrmals geschliffen werden.</p>
+	<p>Wir bieten Ihnen Holzdielen-Böden in verschiedenen Designs und Oberflächen. Warm und hell oder eher kühl und dunkel wirkende, gehobelte, gebürstete, glatte oder antike Holzdielen - haben Sie sich einmal entschieden, kann der Einbau rasch geschehen, so dass Sie auf die Benutzung Ihres Traumbodens nicht lange warten müssen. Informieren Sie sich jetzt detailliert über unsere Angebote!</p>
 	<br>
-</p>
-
-<h3>ANSPRUCHSVOLLE VERARBEITUNG DER HOLZDIELE</h3>
-
-<p>
-	<br>Der <strong>Unterboden</strong> einer Holzdiele <strong>besteht aus nachhaltigem Pappelholz</strong>, die Deckschicht aus einem hochwertigen Eichen-Sägefurnier. Im Gegensatz zum herkömmlichen Schälfurnier behält das gesägte Furnier seine natürliche, helle Farbe und ist nicht anfällig für die Bildung von Rissen und Brüchen. Zudem kann das Rohmaterial unbehandelt verarbeitet werden; es bleibt dadurch elastisch und wirkt einem Ablösen der Deckschicht vom Unterboden entgegen. Unsere Holzdielen sind sogenannte Einblattdielen, auf Wunsch können Sie jedoch auch Mehrblattdielen erhalten, deren Deckschicht aus zwei bis drei Streifen geleimt ist. Die Gesamtstärke einer Holzdiele beträgt 15 mm, die 4 mm starke Nutzschicht kann mehrmals geschliffen werden.
-	<br>Wir bieten Ihnen Holzdielen-Böden in verschiedenen Designs und Oberflächen. Warm und hell oder eher kühl und dunkel wirkende, gehobelte, gebürstete, glatte oder antike Holzdielen - haben Sie sich einmal entschieden, kann der Einbau rasch geschehen, so dass Sie auf die Benutzung Ihres Traumbodens nicht lange warten müssen. Informieren Sie sich jetzt detailliert über unsere Angebote!</p>
-
-<p>&nbsp;</p>
-
-<h3>WEITERE BILDER UNSERER HOLZDIELEN</h3>
-
-<p>
-	<br>
-</p>
-
-<ul>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/landhausdiele/galerie/silvretta/01-silvretta-landhausdiele.jpg" rel="boxplus-sigplus_landhausdiele_galerie_silvretta"><img src="http://www.landhausdielen-wien.at/cache/preview/1db81fb38a6cb2cf9e8ad9b2f2b690d4.jpg" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/landhausdiele/galerie/silvretta/02-silvretta-landhausdiele.jpg" rel="boxplus-sigplus_landhausdiele_galerie_silvretta"><img src="http://www.landhausdielen-wien.at/cache/preview/70f059f75d3c12c604547ab252b9af6e.jpg" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/landhausdiele/galerie/silvretta/Silvretta-landhausdiele-neu.JPG" rel="boxplus-sigplus_landhausdiele_galerie_silvretta"><img src="http://www.landhausdielen-wien.at/cache/preview/11d30f608d13ac467c2053c50c6bf1c4.JPG" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/landhausdiele/galerie/silvretta/parkett_SILVRETTA_1.jpg" rel="boxplus-sigplus_landhausdiele_galerie_silvretta"><img src="http://www.landhausdielen-wien.at/cache/preview/8447366fc261e2bf0e937fa229f110d8.jpg" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/landhausdiele/galerie/silvretta/parkett_SILVRETTA_78.jpg" rel="boxplus-sigplus_landhausdiele_galerie_silvretta"><img src="http://www.landhausdielen-wien.at/cache/preview/afab3484070a9ec24c440ba5636ec422.jpg" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/landhausdiele/galerie/silvretta/parkett_SILVRETTA_79.jpg" rel="boxplus-sigplus_landhausdiele_galerie_silvretta"><img src="http://www.landhausdielen-wien.at/cache/preview/87cc0046f088ab020fb515f13267cba3.jpg" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/landhausdiele/galerie/silvretta/silvretta-landhausdiele-mit-ofen.JPG" rel="boxplus-sigplus_landhausdiele_galerie_silvretta"><img src="http://www.landhausdielen-wien.at/cache/preview/3f5f256105b1b5b23f449a07eb7455a9.JPG" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-</ul>
-
-<p>
-	<br>
-</p>
+	<h3>Weitere Bilder unserer Holzdielen</h3>
+	<div class="row">
+		<img style="margin-bottom: 15px" class="fr-dib fr-draggable fr-fil col-sm-3" src="/storage/app/media/uploaded-files/01-silvretta-landhausdiele.jpg"  data-result="success">
+		<img style="margin-bottom: 15px" class="fr-dib fr-draggable fr-fil col-sm-3" src="/storage/app/media/uploaded-files/02-silvretta-landhausdiele.jpg"  data-result="success">
+		<img style="margin-bottom: 15px" class="fr-dib fr-draggable fr-fil col-sm-3" src="/storage/app/media/uploaded-files/parkett_SILVRETTA_79.jpg"  data-result="success">
+		<img style="margin-bottom: 15px" class="fr-dib fr-draggable fr-fil col-sm-3" src="/storage/app/media/uploaded-files/silvretta-landhausdiele-mit-ofen.jpg"  data-result="success">
+		<img class="fr-dib fr-draggable fr-fil col-sm-3" src="/storage/app/media/uploaded-files/Silvretta-landhausdiele-neu.jpg"  data-result="success">
+		<img class="fr-dib fr-draggable fr-fil col-sm-3" src="/storage/app/media/uploaded-files/parkett_SILVRETTA_78.jpg"  data-result="success"></div>
+</div>
