--- a/themes/demo/content/static-pages/home.htm
+++ b/themes/demo/content/static-pages/home.htm
@@ -9,9 +9,9 @@ seo_description = "Landhausdiele Wien - Infos, Aktionen und kompetente Beratung 
 robot_index = "index"
 robot_follow = "follow"
 ==
-<p>
+<div class="clearfix">
 	<a href="http://www.wohngesund.at/aktionen/parkett-landhausdielen" target="_blank" title="Zur Aktionsseite auf wohngesund.at"><img class="fr-dib fr-draggable" src="/storage/app/media/uploaded-files/landhausdiele-eiche-versailles.jpg" data-result="success"></a>
-</p>
+</div>
 
 <div class="orange"><a href="http://www.wohngesund.at/aktionen/parkett-landhausdielen" target="_blank">AKTUELLE LANDHAUSDIELEN ANGEBOTE AUF WOHNGESUND.AT <span class="icon-external-link"></span></a></div>
 
