code optimizing, css styling

--- a/themes/demo/content/static-pages/landhausdielen-pflege.htm
+++ b/themes/demo/content/static-pages/landhausdielen-pflege.htm
@@ -9,6 +9,7 @@ seo_description = "Pflegehinweise und Tipps für die geölten und lackierten Eic
 robot_index = "index"
 robot_follow = "follow"
 ==
+<h1 class="title">Landhausdielen Pflege</h1>
 <p>Mit Ausnahme von NASCHMARKT und FREUDENAU sind alle COUNTRY HOUSE Landhausdielen mit Naturölen vorbehandelt. Ob sie in Ihrem Haus, Loft, Wohnung, in Ihrem Restaurant oder anderen gewerblichen Objekten Holzböden verlegen möchten, wir haben für alle Anwendungsbereiche die passende Naturholzdiele. Grundsätzlich sind die Holzdielen mit Naturölen vorgeölt und werden nach der Verlegung mit entsprechendem Bodenöl, z.B. verdünntem WOHNCOLOR Parkettöl Top, endbehandelt. In der Benützung entsteht mit der Zeit eine eigene attraktive und für Eichendielen typische Patina, die den Charakter der natürlichen COUNTRY HOUSE Eichen Landhausdielen noch stärker zur Entfaltung bringt.</p>
 
 <p><strong>Ergänzend bitten wir Sie folgendes zu beachten:</strong></p>
@@ -23,7 +24,7 @@ robot_follow = "follow"
 <p><strong>TIPP:</strong>
 	<br>Die Endbehandlung besser mehrmals sehr dünn durchführen als 1x zu dick. Damit vermeiden Sie Nachkleben und einen möglicherweise unerwünschten höheren Glanzgrad.</p>
 
-<h3>PFLEGE VON GEÖLTEN COUNTRY HOUSE LANDHAUSDIELEN:</h3>
+<h3>Pflege von geölten Country House Landhausdielen</h3>
 
 <p>Die Pflege von geölten Landhausdielen erfolgt ganz einfach durch kehren oder Staubsaugen bzw., wenn feucht gewischt wird, mittels Zugabe von WOHNCOLOR Pflegeseife ins Wischwasser.
 	<br>Tipp: verwenden Sie bei der feuchten (nebelfeucht, nicht zu nass) Pflege zwei Eimer: den ersten für die Seifenlauge, den zweiten befüllen Sie mit klarem Wasser und wringen darin die schmutzige Lauge aus.
@@ -31,7 +32,7 @@ robot_follow = "follow"
 	<br>Tipp 2: Manche Kunden verwenden von Zeit zu Zeit einen kleinen Zusatz von Parkettöl im Wischwasser, um den leichten Nachfettungseffekt von Pflegeseifen zu verstärken.
 	<br>Bei Verwendung herkömmlicher Ölseifen ist dies meist ratsam. Achten Sie dazu auf die jeweilige Produktbeschreibung. Die WOHNCOLOR Pflegeseife ist aber besonders hochwertig und enthält bereits genügend Öl für den Rückfettungs- und Pflegeeffekt! Daher kein zusätzliches Öl dem Wischwasser beifügen!</p>
 
-<h3>PFLEGE VON LACKIERTEN COUNTRY HOUSE LANDHAUSDIELEN:</h3>
+<h3>Pflege von lackierten Country House Landhausdielen</h3>
 
 <p>Verwenden sie ein handelsübliches Reinigungsmittel, das ausdrücklich für lackiertes Parkett geeignet ist. Ansonsten reichen staubsaugen und nebelfeuchtes aufwischen.</p>
 
