--- a/themes/demo/content/static-pages/das-unternehmen.htm
+++ b/themes/demo/content/static-pages/das-unternehmen.htm
@@ -9,37 +9,32 @@ seo_description = "Infos zum Unternehmen - WOHNGESUND. Eine kurze Einführung in
 robot_index = "index"
 robot_follow = "follow"
 ==
-<p>Beginnend im Jahre 1989 mit einem ökologisch ausgerichteten Baustoffhandel - daher unser Firmenname WOHNGESUND - bzw. dem Großhandel mit Bodenölen, Wachsen und Naturharzfarben, hat sich unsere Firma über die letzten 20 Jahre zu einem der führenden österreichischen Anbietern jeglicher Art von Parkett und Holzböden, Landhausdielen und Terrassenhölzern entwickelt.</p>
+<h1 class="title">Über WOHNGESUND</h1>
+<p>Beginnend im Jahre 1989 mit einem ökologisch ausgerichteten Baustoffhandel - daher unser Firmenname WOHNGESUND - bzw.
+	dem Großhandel mit Bodenölen, Wachsen und Naturharzfarben, hat sich unsere Firma über die letzten 20 Jahre zu einem
+	der führenden österreichischen Anbietern jeglicher Art von Parkett und Holzböden, Landhausdielen und
+	Terrassenhölzern entwickelt.</p>
 
-<p>
-	<br>
-</p>
-<figure data-component="Renatio\FormBuilder\Components\RenderForm" data-inspector-id="inspectorid-885763852036" data-property-custom_redirect="" data-property-formcode="form_builder_example" data-property-redirect="" data-snippet="renderForm">&nbsp;</figure>
+<p>Wir beliefern durch unsere Import/Exportabteilung den europäischen Parkettgroßhandel, sowie viele Objekteure,
+	Innenausstatter, Parkettleger und Projektentwickler in ganz Europa und sind damit Zulieferer für große Projekte wie
+	Opernhäuser (Letland), Hotelanlagen (Slowakei, Jordanien), Flughafen und Bürogebäude (Österreich, BRD), unzähliger
+	Restaurants, Bars uvm.</p>
 
-<p>Wir beliefern durch unsere Import/Exportabteilung den europäischen Parkettgroßhandel, sowie viele Objekteure, Innenausstatter, Parkettleger und Projektentwickler in ganz Europa und sind damit Zulieferer für große Projekte wie Opernhäuser (Letland), Hotelanlagen (Slowakei, Jordanien), Flughafen und Bürogebäude (Österreich, BRD), unzähliger Restaurants, Bars uvm.</p>
-
-<p>Repräsentative Projekte wie Villen, Privathäuser und Wohnungen vieler Prominenter aus Film, Sport, Politik, Wirtschaft und Kultur, werden von unseren Mitarbeitern genauso mit großer Aufmerksamkeit betreut wie eine Vielzahl von Einzelhandelskunden, die sich über unsere günstigen Aktionswaren, das umfangreiche Angebot und die professionelle Betreuung in unseren Schauräumen in Wien und Würflach (Nähe Wr. Neustadt) freuen.<span>&nbsp;</span></p>
-
-<p>
-	<br>
-</p>
-
-<p>Es würde mich als Inhaber natürlich besonders freuen, wenn ich in Zukunft auch Sie zu unseren Kunden zählen dürfte! Falls Sie Fragen haben, die meine Mitarbeiter wider erwarten, nicht beantworten können, bin ich gerne auch persönlich für Sie da.<span>&nbsp;</span></p>
-
-<p>
-	<br>
+<p>Repräsentative Projekte wie Villen, Privathäuser und Wohnungen vieler Prominenter aus Film, Sport, Politik,
+	Wirtschaft und Kultur, werden von unseren Mitarbeitern genauso mit großer Aufmerksamkeit betreut wie eine Vielzahl
+	von Einzelhandelskunden, die sich über unsere günstigen Aktionswaren, das umfangreiche Angebot und die
+	professionelle Betreuung in unseren Schauräumen in Wien und Würflach (Nähe Wr. Neustadt) freuen.<span>&nbsp;</span>
 </p>
 
-<p>Ich freue mich auf Ihren Besuch!<span>&nbsp;</span></p>
-
-<p>
-	<br>
-</p>
-
-<p>Mit freundlichen Grüßen<span>&nbsp;</span></p>
+<p>Es würde mich als Inhaber natürlich besonders freuen, wenn ich in Zukunft auch Sie zu unseren Kunden zählen dürfte!
+	Falls Sie Fragen haben, die meine Mitarbeiter wider erwarten, nicht beantworten können, bin ich gerne auch
+	persönlich für Sie da.</p>
 
 <p>
 	<br>
 </p>
 
-<p><strong>Gottfried Crepaz</strong></p>
+<p>Ich freue mich auf Ihren Besuch!</p>
+
+<p>Mit freundlichen Grüßen<br>
+<strong>Gottfried Crepaz</strong></p>
