--- a/themes/demo/content/static-pages/wiederverkaeufer.htm
+++ b/themes/demo/content/static-pages/wiederverkaeufer.htm
@@ -9,39 +9,17 @@ seo_description = "Information für Wiederverkäufer zu unserem  Terrassendielen
 robot_index = "index"
 robot_follow = "follow"
 ==
-<h3>GROSSE AUSWAHL - PREISWERT - SOFORT LIEFERBA</h3>
+<h1 class="title">Große Auswahl - Preiswert - sofort lieferbar</h1>
 
-<p>
-	<br>
-</p>
-
-<p>
-	<br>
-</p>
-
-<ul>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/wiederverkauf/bilder/parkett_warenlager_02.jpg" rel="boxplus-sigplus_wiederverkauf_bilder"><img src="http://www.landhausdielen-wien.at/cache/preview/0f78ee9c5e3ee387517d49ba3316ab94.jpg" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/wiederverkauf/bilder/parkett_warenlager_04.jpg" rel="boxplus-sigplus_wiederverkauf_bilder"><img src="http://www.landhausdielen-wien.at/cache/preview/68a381bf5aaedcd2bca0e45e2e04182c.jpg" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-	<li>
-		<a href="http://www.landhausdielen-wien.at/images/stories/wiederverkauf/bilder/parkett_warenlager_08.jpg" rel="boxplus-sigplus_wiederverkauf_bilder"><img src="http://www.landhausdielen-wien.at/cache/preview/164a6078fc943a47acd768bf8a156878.jpg" height="150" alt="Country House Eiche Landhausdiele von Wohngesund" title="Eine Eichendiele von Wohngesund" class="fr-dii fr-draggable" style="width: 150px;"></a>
-	</li>
-</ul>
-
-<p>
-	<br>
-</p>
-
-<p>Die<span>&nbsp;</span><strong>WOHNGESUND International Großhandels - bzw. Import - Export</strong><span>&nbsp;</span>Abteilung ist die umsatzstärkste bei WOHNGESUND (Parkett,<span>&nbsp;</span><a href="http://www.wohngesund.at/landhausdielen.html" title="Mehr Infos zu  unseren Landhausdielen">Landhausdielen</a><span>&nbsp;</span>sowie<span>&nbsp;</span><a href="http://www.landhausdielen-wien.at/" target="_blank" title="Holzterrassen-Seite von  WOHNGESUND">Holzterrassen</a>), und macht den weitaus größten Anteil der Geschäftstätigkeit aus.</p>
-
-<p>&nbsp;</p>
-
-<p><img src="http://www.holzterrassen-wien.at/images/stories/wiederverkauf/banner_landkarte.jpg" border="0" alt="Eine Ausschnitt einer Landkarte" class="fr-dii fr-draggable"></p>
-
-<p>&nbsp;</p>
+<div class="row">
+<div class="col-sm-4"><img class="fr-dib fr-draggable" src="/storage/app/media/uploaded-files/parkett_warenlager_02.jpg" style="width: 260px;" data-result="success"></div>
+<div class="col-sm-4"><img class="fr-dib fr-draggable" src="/storage/app/media/uploaded-files/parkett_warenlager_04.jpg" style="width: 260px;" data-result="success"></div>
+<div class="col-sm-4"><img class="fr-dib fr-draggable" src="/storage/app/media/uploaded-files/parkett_warenlager_08.jpg" style="width: 260px;" data-result="success"></div>
+</div>
+<br>
+<p>Die <strong>WOHNGESUND International Großhandels - bzw. Import - Export</strong> Abteilung ist die umsatzstärkste bei WOHNGESUND (Parkett, <a href="http://www.wohngesund.at/landhausdielen-eiche" title="Mehr Infos zu  unseren Landhausdielen">Landhausdielen</a> sowie <a href="http://www.holzterrassen-wien.at/" target="_blank" title="Holzterrassen-Seite von  WOHNGESUND">Holzterrassen</a>), und macht den weitaus größten Anteil der Geschäftstätigkeit aus.</p>
+<br>
+<p class="text-center"><img class="fr-dib fr-draggable" src="/storage/app/media/uploaded-files/banner_landkarte.jpg" data-result="success"></p>
 
 <p>Für WOHNGESUND International wird <strong>weltweit produziert</strong>. Vor allem in Brasilien, Bolivien, Malaysia, Hongkong und der Volksrepublik China, sowie natürlich in Europa, vor allem in Österreich, Spanien, Portugal, Deutschland, Ungarn und Italien.
 	<br>
@@ -54,37 +32,37 @@ robot_follow = "follow"
 	<li>Das angebotene Sortiment ist ständig der eigenen, permanenten, <strong>Qualitätsprüfung</strong> ausgesetzt, da wir alle Produkte die wir anbieten im Wiener Raum auch verlegen bzw verarbeiten. Wir sind daher nicht nur ein preiswerter Anbieter, sondern auch ein sehr <strong>kompetenter Ansprechpartner für die Verlegung und Verarbeitung</strong>.</li>
 	<li>Die von uns angebotenen Landhausdielen, Parkette und Holzterrassen sind in der Regel zu 100% lagernd (Ab Zentrallager 2732 Würflach, Nähe Wr. Neustadt) und daher <strong>rasch lieferfähig</strong>! Zwischenverkauf vorbehalten.</li>
 </ul>
-
+<br>
 <p><strong>Eine kurze Auswahl der lagernden Artikel:</strong></p>
-
 <ul>
-	<li><a href="http://www.holzfussboeden.com/" target="_blank">LANDHAUSDIELEN</a> und extrabreite Landhausdielen in Eiche, 28 verschiedene Designs</li>
+	<li><strong><a href="http://www.wohngesund.at/landhausdielen-eiche" target="_blank">LANDHAUSDIELEN</a></strong> und extrabreite Landhausdielen in Eiche, 28 verschiedene Designs</li>
 	<li><strong>MASSIVHOLZDIELEN</strong> in Eiche, 11 verschiedene Designs, diverse Breiten</li>
 	<li><strong>2-SCHICHTPARKETT</strong>, diverse hochwertige Hölzer wie Iroko, Walnuss amerikanisch, Tigerwood, Sucupira, Teak, Doussie, etc.</li>
-	<li><a href="http://www.landhausdielen-wien.at/" target="_blank">TERRASSENDECKS</a>, ausschließlich aus Hölzern der Dauerhaftigkeitsklasse 1, wie IPE-Diamantnuss, Cumaru, Karal etc. Lagerware ist hier saisonbedingt schwankend, groß von April bis September, gering über die Wintermonate</li>
-	<li><strong>KONSTRUKTIONSHÖZER</strong> und diverses Zubehör für die Unterkonstruktionen der Terrassenhölzer in unterschiedlichen Dimensionen, um verschiedene Aufbauhöhen zu ermöglichen</li>
-	<li><a href="http://www.wohngesund.at/parkett-wissen/parkett-kleber.html" target="_blank">PARKETTKLEBSTOFFE</a>, ausschließlich mit der niedrigsten Schadstoffklasse EC1</li>
+	<li><strong><a href="http://www.holzterrassen-wien.at/" target="_blank">TERRASSENDECKS</a></strong>, ausschließlich aus Hölzern der Dauerhaftigkeitsklasse 1, wie IPE-Diamantnuss, Cumaru, Karal etc. Lagerware ist hier saisonbedingt schwankend, groß von April bis September, gering über die Wintermonate</li>
+	<li><strong>KONSTRUKTIONSHÖLZER</strong> und diverses Zubehör für die Unterkonstruktionen der Terrassenhölzer in unterschiedlichen Dimensionen, um verschiedene Aufbauhöhen zu ermöglichen</li>
 	<li><strong>RANDLEISTEN</strong> für ca 40 verschiedene Holzarten
 		<br>Sowie diverse Landhausdielen, z.B. Walnuss amerikanisch, Iroko, Doussie etc, verschiedene Bambusparkettböden, lackiert sowie geölt, Fineline Parkettböden uvm.</li>
 </ul>
 
-<p>&nbsp;</p>
+<br>
 
-<h3>WIR WÜRDEN UNS ÜBER IHR INTERESSE AN EINER ZUSAMMENARBEIT FREUEN!</h3>
+<h3>Wir würden uns über Ihr Interesse an einer Zusammenarbeit sehr freuen!</h3>
 
-<p>Fragen sie doch bitte bei uns an! Wir sind auch nach wie vor auf der Suche nach lokalen Partnerhändlern, denen wir gerne ein <strong>kostengünstige Bemusterung</strong> zur Verfügung stellen, mit Ihnen <strong>Einschulungen</strong> in unser Produktsortiment durchführen und <strong>Anfragen</strong> aus Ihrer jeweiligen Region zu Ihnen <strong>weiterleiten</strong>.
+<p>Fragen sie doch bei uns an! Wir sind auch nach wie vor auf der Suche nach lokalen Partnerhändlern, denen wir gerne ein <strong>kostengünstige Bemusterung</strong> zur Verfügung stellen, mit Ihnen <strong>Einschulungen</strong> in unser Produktsortiment durchführen und <strong>Anfragen</strong> aus Ihrer jeweiligen Region zu Ihnen <strong>weiterleiten</strong>.
 	<br>
 	<br>Um Ihnen die richtigen Produkte zu den entsprechenden Konditionen anbieten zu können, bitten wir, dass Sie uns Ihre geschätzten, jährlichen benötigten Mengen mitteilen, ob Sie Kommisionsweise, palettenweise oder Containerabnahme planen und an welchen Produkten- bzw. Produktgruppen Sie Interesse haben. Wenn Sie an einer lokalen Vertretung von WOHNGESUND Produkten Interesse haben, teilen Sie uns das bitte ebenfalls mit.
 	<br>
 	<br>Wir erstellen Ihnen rasch Ihr entsprechendes Angebot bzw. melden uns gerne telefonisch bei Ihnen und, wenn Sie es wünschen, besucht Sie nach Terminvereinbarung einer unser Aussendienstmitarbeiter, oder einer der Verkaufsleiter.</p>
-
-<p>
+<br>
+<p class="text-center">
+	<strong>Sie haben einen konkreten Bedarf? Testen Sie uns!</strong>
 	<br>
-	<br><a href="http://www.landhausdielen-wien.at/online-anfrage/wiederverkaeufer.html" title="Online Anfrage für Wiederverkäufer">Online Anfrage für Wiederverkäufer:</a> Sie haben einen konkreten Bedarf? Testen Sie uns!</p>
+	<br>
+	<a href="http://www.landhausdielen-wien.at/online-anfrage/wiederverkaeufer.html" title="Online Anfrage für Wiederverkäufer"><button type="button" class="btn btn-lg btn-success">Online Anfrage für Wiederverkäufer</button></a></p>
 
 <p>&nbsp;</p>
 
-<p>Wir freuen uns über Ihre Nachricht und versprechen Ihnen <strong>gute und fachgerechete Betreuung</strong>, sowie ein sehr<strong>kompetitives Preisangebot</strong> und Unterstützung in allen Belangen, damit Sie mit den Produkten von WOHNGESUND erfolgreich sein werden!
+<p>Wir freuen uns über Ihre Nachricht und versprechen Ihnen <strong>gute und fachgerechete Betreuung</strong>, sowie ein sehr<strong> wettbewerbsfähiges Preisangebot</strong> und Unterstützung in allen Belangen, damit Sie mit den Produkten von WOHNGESUND erfolgreich sein werden!
 	<br>
 	<br>Mit freundlichen Grüßen,
 	<br>
