holzdielen.htm, home.htm ...

--- a/themes/demo/content/static-pages/home.htm
+++ b/themes/demo/content/static-pages/home.htm
@@ -15,7 +15,7 @@ robot_follow = "follow"
 
 <div class="orange"><a href="http://www.wohngesund.at/aktionen/parkett-landhausdielen" target="_blank">AKTUELLE LANDHAUSDIELEN ANGEBOTE AUF WOHNGESUND.AT <span class="icon-external-link"></span></a></div>
 
-<h1>COUNTRY HOUSE Landhausdielen von WOHNGESUND in Wien</h1>
+<h1 class="title">COUNTRY HOUSE Landhausdielen von WOHNGESUND in Wien</h1>
 
 <h2>Für jeden Bedarf die passende Landhausdiele/Eichendiele</h2>
 
